Added encKey and sigKey to /token response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ validation-service.sessionMaxDurationSecondsString = 1200
 validation-service.demoModeOn = true
 validation-service.demoPassAllDccs = true
 
-
 validation-service.redisHost = localhost
 
 validation-service.resultTokenLifetimeSeconds = 3600
@@ -21,6 +20,9 @@ validation-service.validationResultJwsVerificationKey = MIICIjANBgkqhkiG9w0BAQEF
 validation-service.configFileFolderPath = build\\resources\\main
 
 validation-service.dccVerificationServiceUri = http://localhost:9000/verify
+
+validation-service.rootUrl = http://localhost:8080
+
 
 log4j.rootLogger = DEBUG,console
 log4j.appender.console=org.apache.log4j.ConsoleAppender  
