--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -1,4 +1,4 @@
-validation-service.configFileFolderPath = /service-bin
+validation-service.configFileFolderPath = /service-bin/test
 validation-service.demoModeOn = true
 validation-service.demoModePassAllDccs = true
 validation-service.redisHost = redis-demo
