Added get all airline public sig keys from identity endpoints.

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -22,6 +22,7 @@ services:
           - "6379:6379"
 
     verifier:
-        image: "now"
+        build: ../nl-covid19-coronacheck-hcert/.
+        image: "verifier"
         ports:
           - "4003"
