--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,44 @@
-#
 version: "3.9"
 
-services:
-    rest-api:
-        build: .
-        ports:
-          - "10000:8080"
-        depends_on:
-          - redis
-        links:
-          - redis
+volumes:
+  verifier_config:
 
-    redis:
-        image: "redis:6.2.6-alpine"
-        command: redis-server
-          #--requirepass noneShallPass
-        #docker run --name local-redis -p  -d redis
-        #docker run --name redis_cont -e  redis:latest
-        expose:
-          - "6379:6379"
+services:
+  validation:
+    image: "validation:latest"
+    ports:
+      - "8080:8080"
+    depends_on:
+      - redis
+      - verifier
+    links:
+      - redis
+      - verifier
+    volumes:
+      - verifier_config:/var/opt/verifierconfig
+
+  redis:
+    image: "redis:6.2.6-alpine"
+    command: redis-server
+    expose:
+      - 6379/tcp
+  #        ports:
+  #          - 6379:6379
+
+  verifier:
+    image: "verifier:latest"
+    expose:
+      - "4003"
+    #        ports:
+    #          - "4003"
+    volumes:
+      - verifier_config:/var/opt/verifierconfig
+
+#  airlinestub:
+#    image: "airline_stub:latest"
+#    expose:
+#      - "8081"
+#    ports:
+#      - "8081:8081"
+#    links:
+#      - validation
