--- a/src/main/resources/application-dockerdemolocal.properties
+++ b/src/main/resources/application-dockerdemolocal.properties
@@ -1,6 +1,9 @@
+server.port=8080
 #Multiple allowed, seperated by commas
 validation-service.airlineIdentityUris = http://192.168.178.12:8081/identity
 validation-service.configFileFolderPath = /service-bin/dockerdemolocal
 validation-service.redisHost = redis
 validation-service.dccVerificationServiceUri = http://verifier:4003/verify_signature
 validation-service.publicKeysFileName = /var/opt/verifierconfig/public_keys.json
+
+
