--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9000
 validation-service.sessionMaxDurationSecondsString = 1200
 validation-service.resultTokenLifetimeSeconds = 3600
 
@@ -23,20 +24,20 @@ validation-service.dccVerificationServiceUri = http://localhost:4003/verify_sign
 
 #Multiple allowed, seperated by commas
 #From validation service to any/all airline id urls
-validation-service.airlineIdentityUris = http://localhost:8081/identity
+validation-service.airlineIdentityUris = http://localhost:9001/identity
 
 #From the wallets perspective
-validation-service.validationServiceValidateUri = http://localhost:8080
+validation-service.validationServiceValidateUri = http://localhost:9000/validate
 
 # In order:#  config (color codes)
 #  NL custom business_rules
 #  EU distributed business_rules
 #  values referred to in the business rules
 #  Trustlist (public keys) issuers
-validation-service.configUri = https://verifier-api.coronacheck.nl/v4/dcbs/config
-validation-service.customBusinessRulesUri = https://verifier-api.coronacheck.nl/v4/dcbs/custom_business_rules
-validation-service.businessRulesUri = https://verifier-api.coronacheck.nl/v4/dcbs/business_rules
-validation-service.valueSetsUri = https://verifier-api.coronacheck.nl/v4/dcbs/value_sets
-validation-service.publicKeysUri = https://verifier-api.coronacheck.nl/v4/dcbs/public_keys
+validation-service.configUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/config
+validation-service.customBusinessRulesUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/custom_business_rules
+validation-service.businessRulesUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/business_rules
+validation-service.valueSetsUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/value_sets
+validation-service.publicKeysUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/public_keys
 #This just drops it locally
 validation-service.publicKeysFileName = public_keys.json
