--- a/deploy-aci/application.properties
+++ b/deploy-aci/application.properties
@@ -1,5 +1,6 @@
 server.port=7000
-validation-service.airlineIdentityUris = http://20.23.22.189:7001/identity
+
+validation-service.airlineIdentityUris = https://tvairline.westeurope.cloudapp.azure.com:7001/identity
 validation-service.configFileFolderPath = /service-bin/
 validation-service.redisHost = redis
 validation-service.dccVerificationServiceUri = http://verifier:4003/verify_signature
