Seperate folder for building image for K8S

--- a/deploy-azk/application.properties
+++ b/deploy-azk/application.properties
@@ -1,9 +1,6 @@
 server.port=7000
-
-validation-service.airlineIdentityUris = https://tvairline.westeurope.cloudapp.azure.com:7001/identity
+validation-service.airlineIdentityUris = https://tvairline.westeurope.cloudapp.azure.com/identity
 validation-service.configFileFolderPath = /service-bin/
 validation-service.redisHost = redis
 validation-service.dccVerificationServiceUri = http://verifier:4003/verify_signature
 validation-service.publicKeysFileName = /var/opt/verifierconfig/public_keys.json
-
-
