--- a/azurekubernetes/deploy.template.yaml
+++ b/azurekubernetes/deploy.template.yaml
@@ -170,7 +170,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
         - name: validationsvc
-          image: stevekellaway/validation_service:latest
+          image: stevekellaway/validation_service:azk_latest
           resources:
             requests:
               cpu: 0.1
@@ -199,6 +199,16 @@ spec:
   selector:
     app: validationsvc
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: verifier
+spec:
+  ports:
+    - port: 4003
+  selector:
+    app: verifier
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -213,11 +223,12 @@ spec:
       labels:
         app: verifier
     spec:
+#      hostname: verifier
       nodeSelector:
         "beta.kubernetes.io/os": linux
       containers:
         - name: verifier
-          image: stevekellaway/verifier:latest
+          image: stevekellaway/verifier:azk_latest
           resources:
             requests:
               cpu: 0.3
@@ -234,4 +245,4 @@ spec:
       volumes:
         - name: verifier-data
           persistentVolumeClaim:
-            claimName: ssl-data
+            claimName: verifier-storage
