Validate accepts image or PDF. Added sig to encrypted DCC. Re-instated Wallet-like test function.

--- a/deploylocaldocker/application.properties
+++ b/deploylocaldocker/application.properties
@@ -3,6 +3,5 @@ validation-service.airlineIdentityUris = http://192.168.178.12:7001/identity
 validation-service.configFileFolderPath = /service-bin/
 validation-service.redisHost = redis
 validation-service.dccVerificationServiceUri = http://verifier:4003/verify_signature
+validation-service.dccArtifactParsingUrl = http://dccparser:81/api/parse
 validation-service.publicKeysFileName = /var/opt/verifierconfig/public_keys.json
-
-
