Added Swagger generation. Cleanup.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@ validation-service.valueSetsUri = https://verifier-api.acc.coronacheck.nl/v4/dcb
 validation-service.publicKeysUri = https://verifier-api.acc.coronacheck.nl/v4/dcbs/public_keys
 #This just drops it locally
 validation-service.publicKeysFileName = public_keys.json
-validation-service.dccArtifactParsingServiceUri = http://localhost:81/api/parse
+validation-service.dccArtifactParsingServiceUri = http://parser:81/api/parse
 validation-service.validationAccessTokenSignatureAlgorithms = RS256,ES256,PS256
