Added USER to docker files.

--- a/deploylocaldocker/Dockerfile
+++ b/deploylocaldocker/Dockerfile
@@ -1,4 +1,8 @@
 FROM ghcr.io/minienw/validation_service:latest_noconfig
+
+RUN adduser -S validator -H -D
+USER validator
+
 WORKDIR /service-bin
 COPY application.properties .
 COPY identity.json .
