--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,4 +1,6 @@
 FROM stevekellaway/validation_service:latest_noconfig
+RUN adduser -S validator -H -D
+USER validator
 WORKDIR /service-bin
 COPY application.properties .
 COPY identity.json .
