--- a/deploy-azk/Dockerfile
+++ b/deploy-azk/Dockerfile
@@ -1,5 +1,5 @@
 FROM ghcr.io/minienw/validation_service:latest_noconfig
-RUN adduser -S validator -H -D
+RUN adduser validator -H -D
 USER validator
 WORKDIR /service-bin
 COPY application.properties .
