--- a/deploylocaldocker/Dockerfile
+++ b/deploylocaldocker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghcr.io/minienw/validation_service:latest_noconfig
 
-RUN adduser -S validator -H -D
+RUN adduser validator -H -D
 USER validator
 
 WORKDIR /service-bin
